Move bool widget logic to its own class, leave API which interacts with widget by name on MessageWidget for now

--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -10,6 +10,12 @@
 </plugin>
 
 <plugin filename="TopicInterface">
+  <title>Bool on /bool</title>
+  <topic>/bool</topic>
+  <message_type>ignition.msgs.Boolean</message_type>
+</plugin>
+
+<plugin filename="TopicInterface">
   <title>SceneMsg on /scene</title>
   <topic>/scene</topic>
   <message_type>ignition.msgs.Scene</message_type>
