--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -16,6 +16,12 @@
 </plugin>
 
 <plugin filename="TopicInterface">
+  <title>Double on /double</title>
+  <topic>/double</topic>
+  <message_type>ignition.msgs.Double</message_type>
+</plugin>
+
+<plugin filename="TopicInterface">
   <title>SceneMsg on /scene</title>
   <topic>/scene</topic>
   <message_type>ignition.msgs.Scene</message_type>
