--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,12 +5,14 @@ set (sources
   ${CMAKE_CURRENT_SOURCE_DIR}/Conversions.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/DoubleWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/DragDropModel.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/GroupWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Helpers.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Iface.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/ign.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/MainWindow.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/MessageWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Plugin.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/PropertyWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/SearchModel.cc
   PARENT_SCOPE
 )
@@ -21,6 +23,7 @@ set (gtest_sources
   Helpers_TEST.cc
   Iface_TEST.cc
   MainWindow_TEST.cc
+  MessageWidget_TEST.cc
   SearchModel_TEST.cc
 )
 
