--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,10 +2,10 @@ include_directories(${PROJECT_BINARY_DIR})
 
 set (sources
   ${CMAKE_CURRENT_SOURCE_DIR}/BoolWidget.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/CollapsibleWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Conversions.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/DoubleWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/DragDropModel.cc
-  ${CMAKE_CURRENT_SOURCE_DIR}/GroupWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Helpers.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Iface.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/ign.cc
