--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -22,6 +22,12 @@
 </plugin>
 
 <plugin filename="TopicInterface">
+  <title>Vector3d on /vector3d</title>
+  <topic>/vector3d</topic>
+  <message_type>ignition.msgs.Vector3d</message_type>
+</plugin>
+
+<plugin filename="TopicInterface">
   <title>SceneMsg on /scene</title>
   <topic>/scene</topic>
   <message_type>ignition.msgs.Scene</message_type>
