--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -12,6 +12,7 @@ add_definitions(${Qt5Core_DEFINITIONS})
 set (qt_headers
   BoolWidget.hh
   CollapsibleWidget.hh
+  ColorWidget.hh
   DoubleWidget.hh
   MainWindow.hh
   MessageWidget.hh
