pose widget and fix several tests

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -18,6 +18,7 @@ set (qt_headers
   MessageWidget.hh
   PropertyWidget.hh
   Plugin.hh
+  Pose3dWidget.hh
   StringWidget.hh
   Vector3dWidget.hh
 )
