--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -32,3 +32,9 @@
   <topic>/scene</topic>
   <message_type>ignition.msgs.Scene</message_type>
 </plugin>
+
+<plugin filename="TopicInterface">
+  <title>VisualMsg on /visual</title>
+  <topic>/visual</topic>
+  <message_type>ignition.msgs.Visual</message_type>
+</plugin>
