--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -14,6 +14,7 @@ set (qt_headers
   CollapsibleWidget.hh
   ColorWidget.hh
   GeometryWidget.hh
+  EnumWidget.hh
   MainWindow.hh
   MessageWidget.hh
   NumberWidget.hh
