move density to its own widget, but it doesn't work yet

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -13,6 +13,7 @@ set (qt_headers
   BoolWidget.hh
   CollapsibleWidget.hh
   ColorWidget.hh
+  DensityWidget.hh
   GeometryWidget.hh
   EnumWidget.hh
   MainWindow.hh
