configure read-only and visibility from plugin

--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -31,6 +31,8 @@
   <title>SceneMsg on /scene</title>
   <topic>/scene</topic>
   <message_type>ignition.msgs.Scene</message_type>
+  <read_only>true</read_only>
+  <hide_widget>header</hide_widget>
 </plugin>
 
 <plugin filename="TopicInterface">
