Pass message on constructor and remove MessageWidget::Load, no more custom msg widgets, start passing tests to each widget: Enum and Bool

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,8 +25,10 @@ set (sources
 )
 
 set (gtest_sources
+  BoolWidget_TEST.cc
   Conversions_TEST.cc
   DragDropModel_TEST.cc
+  EnumWidget_TEST.cc
   Helpers_TEST.cc
   Iface_TEST.cc
   MainWindow_TEST.cc
