--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -3,6 +3,7 @@
 
 set (gtest_local_sources
   ImageDisplay_TEST.cc
+  PlotWindow_TEST.cc
   Publisher_TEST.cc
   Requester_TEST.cc
   Responder_TEST.cc
