Test loading all example config files

--- a/examples/config/hellodouble.config
+++ b/examples/config/hellodouble.config
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 
-<plugin filename="libhello_plugin.so">
+<plugin filename="hello_plugin">
 </plugin>
 
-<plugin filename="libhello_plugin.so">
+<plugin filename="hello_plugin">
   <has_titlebar>false</has_titlebar>
 </plugin>
