--- a/examples/config/reqres.config
+++ b/examples/config/reqres.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
-<plugin filename="libRequester.so">
+<plugin filename="Requester">
 </plugin>
 
-<plugin filename="libResponder.so">
+<plugin filename="Responder">
 </plugin>
