--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 
-<plugin filename="libTimePanel.so">
+<plugin filename="TimePanel">
   <title>All elements</title>
 
   <world_control>
@@ -17,7 +17,7 @@
 
 </plugin>
 
-<plugin filename="libTimePanel.so">
+<plugin filename="TimePanel">
   <title>Only sim time</title>
 
   <world_stats>
@@ -27,7 +27,7 @@
 
 </plugin>
 
-<plugin filename="libTimePanel.so">
+<plugin filename="TimePanel">
   <title>Only play/pause</title>
 
   <world_control>
