--- a/examples/config/pubsub.config
+++ b/examples/config/pubsub.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
-<plugin filename="libPublisher.so">
+<plugin filename="Publisher">
 </plugin>
 
-<plugin filename="libTopicEcho.so">
+<plugin filename="TopicEcho">
 </plugin>
