remove example plugin from example config files, update README

--- a/examples/config/layout.config
+++ b/examples/config/layout.config
@@ -7,18 +7,18 @@
   <width>478</width>
   <height>551</height>
 </window>
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>1</title>
 </plugin>
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>2</title>
 </plugin>
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>3</title>
 </plugin>
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>4</title>
 </plugin>
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>5</title>
 </plugin>
