--- a/examples/config/no_layout.config
+++ b/examples/config/no_layout.config
@@ -1,17 +1,17 @@
 <?xml version="1.0"?>
 
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>1</title>
 </plugin>
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>2</title>
 </plugin>
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>3</title>
 </plugin>
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>4</title>
 </plugin>
-<plugin filename="hello_plugin">
+<plugin filename="Publisher">
     <title>5</title>
 </plugin>
