--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -10,6 +10,7 @@ set (CMAKE_AUTOMOC ON)
 add_definitions(${Qt5Core_DEFINITIONS})
 
 set (qt_headers
+  BoolWidget.hh
   CollapsibleWidget.hh
   MainWindow.hh
   MessageWidget.hh
