--- a/examples/config/menus.config
+++ b/examples/config/menus.config
@@ -2,7 +2,7 @@
 
 <window>
   <menus>
-    <file hide="true">
+    <file visible="false">
     </file>
     <plugins from_paths="false">
       <show>Publisher</show>
