--- a/test/config/no_menus.config
+++ b/test/config/no_menus.config
@@ -2,9 +2,9 @@
 
 <window>
   <menus>
-    <file hide="true">
+    <file visible="false">
     </file>
-    <plugins hide="true">
+    <plugins visible="false">
     </plugins>
   </menus>
 </window>
