--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set (sources
   ${CMAKE_CURRENT_SOURCE_DIR}/MessageWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/NumberWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Plugin.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Pose3dWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/PropertyWidget.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/SearchModel.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/StringWidget.cc
@@ -28,6 +29,7 @@ set (gtest_sources
   MainWindow_TEST.cc
   MessageWidget_TEST.cc
   NumberWidget_TEST.cc
+  Pose3dWidget_TEST.cc
   SearchModel_TEST.cc
   StringWidget_TEST.cc
 )
