Adding VariablePill and VariablePillContainer classes.

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -21,6 +21,8 @@ set (qt_headers
   Pose3dWidget.hh
   PropertyWidget.hh
   StringWidget.hh
+  VariablePill.hh
+  VariablePillContainer.hh
   Vector3dWidget.hh
 )
 
