Make Publisher plugin customizable

--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -37,4 +37,9 @@
     <topic>/plugin</topic>
     <message_type>ignition.msgs.Plugin</message_type>
 </plugin>
-<plugin filename="Publisher"/>
+<plugin filename="Publisher">
+    <topic>/vector3d</topic>
+    <message_type>ignition.msgs.Vector3d</message_type>
+    <message>x: 0 y: 0 z: -1</message>
+    <frequency>0</frequency>
+</plugin>
