port visible and readonly, add tests for visible

--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -16,6 +16,15 @@
     <title>Scene on /scene</title>
     <topic>/scene</topic>
     <message_type>ignition.msgs.Scene</message_type>
+    <hide>header</hide>
+    <hide>name</hide>
+    <hide>ambient</hide>
+    <hide>background</hide>
+    <hide>sky</hide>
+    <hide>shadows</hide>
+    <hide>fog</hide>
+    <hide>grid</hide>
+    <hide>origin_visual</hide>
 </plugin>
 <plugin filename="TopicInterface">
     <title>Vector3d on /vector3d</title>
