cleanup readonly and add tests

--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -12,7 +12,7 @@
     <topic>/laser_scan</topic>
     <message_type>ignition.msgs.LaserScan</message_type>
 </plugin>
-<plugin filename="TopicInterface">
+<plugin filename="TopicInterface" read_only="true">
     <title>Scene on /scene</title>
     <topic>/scene</topic>
     <message_type>ignition.msgs.Scene</message_type>
@@ -25,6 +25,7 @@
     <hide>fog</hide>
     <hide>grid</hide>
     <hide>origin_visual</hide>
+    <hide>joint</hide>
 </plugin>
 <plugin filename="TopicInterface">
     <title>Vector3d on /vector3d</title>
@@ -51,4 +52,16 @@
     <topic>/echo</topic>
     <message_type>ignition.msgs.StringMsg</message_type>
 </plugin>
-<plugin filename="Publisher"/>
+<plugin filename="Publisher">
+    <topic>/scene</topic>
+    <message_type>ignition.msgs.Scene</message_type>
+    <frequency>0</frequency>
+    <message>
+      model {name:"A"}
+      model {name:"B"}
+      model {name:"C"}
+      light {name:"D"}
+      light {name:"E"}
+    </message>
+</plugin>
+
