handle repeated fields too

--- a/examples/config/topicInterface.config
+++ b/examples/config/topicInterface.config
@@ -26,6 +26,8 @@
     <hide>grid</hide>
     <hide>origin_visual</hide>
     <hide>joint</hide>
+    <hide>model::header</hide>
+    <hide>light::header</hide>
 </plugin>
 <plugin filename="TopicInterface">
     <title>Vector3d on /vector3d</title>
