Failing to test QT dragAndDrop from GTest.

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -26,6 +26,7 @@ set (qt_headers
   VariablePill.hh
   VariablePillContainer.hh
   Vector3dWidget.hh
+  VariablePillContainer_TEST.hh
 )
 
 set (headers
