--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,8 @@ set (sources
   PARENT_SCOPE
 )
 
+#QT5_WRAP_CPP(header_varPill_MOC VariablePillContainer_TEST.hh)
+
 set (gtest_sources
   BoolWidget_TEST.cc
   ColorWidget_TEST.cc
@@ -43,7 +45,6 @@ set (gtest_sources
   Pose3dWidget_TEST.cc
   SearchModel_TEST.cc
   StringWidget_TEST.cc
-  VariablePillContainer_TEST.cc
   Vector3dWidget_TEST.cc
 )
 
@@ -54,6 +55,48 @@ if (HAVE_IGN_TOOLS)
 endif()
 
 ign_build_tests(${gtest_sources})
+
+set(GTEST_SOURCE_file VariablePillContainer_TEST.cc)
+string(REGEX REPLACE ".cc" "" BINARY_NAME ${GTEST_SOURCE_file})
+set(BINARY_NAME ${TEST_TYPE}_${BINARY_NAME})
+if(USE_LOW_MEMORY_TESTS)
+  add_definitions(-DUSE_LOW_MEMORY_TESTS=1)
+endif(USE_LOW_MEMORY_TESTS)
+add_executable(${BINARY_NAME} ${GTEST_SOURCE_file} ${header_varPill_MOC})
+
+add_dependencies(${BINARY_NAME}
+  ${PROJECT_NAME_LOWER}${PROJECT_MAJOR_VERSION}
+  gtest gtest_main
+)
+
+if (UNIX)
+  target_link_libraries(${BINARY_NAME}
+     libgtest_main.a
+     libgtest.a
+     pthread
+     ${PROJECT_NAME_LOWER}${PROJECT_MAJOR_VERSION}
+     ${header_varPill_MOC}
+  )
+elseif(WIN32)
+  target_link_libraries(${BINARY_NAME}
+     gtest.lib
+     gtest_main.lib
+     ${PROJECT_NAME_LOWER}${PROJECT_MAJOR_VERSION}.lib)
+else()
+   message(FATAL_ERROR "Unsupported platform")
+endif()
+
+add_test(${BINARY_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME}
+--gtest_output=xml:${CMAKE_BINARY_DIR}/test_results/${BINARY_NAME}.xml)
+
+set_tests_properties(${BINARY_NAME} PROPERTIES TIMEOUT 240)
+
+if(PYTHONINTERP_FOUND)
+  # Check that the test produced a result and create a failure if it didn't.
+  # Guards against crashed and timed out tests.
+  add_test(check_${BINARY_NAME} ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/tools/check_test_ran.py
+    ${CMAKE_BINARY_DIR}/test_results/${BINARY_NAME}.xml)
+endif()
 
 add_subdirectory(cmd)
 add_subdirectory(plugins)
