--- a/src/plugins/plot/CMakeLists.txt
+++ b/src/plugins/plot/CMakeLists.txt
@@ -2,7 +2,9 @@
 # shared libraries
 
 set (gtest_local_sources
+  IncrementalPlot_TEST.cc
   Plot_TEST.cc
+  PlotCurve_TEST.cc
 )
 
 ign_build_tests(${gtest_local_sources})
