insert and edit multiple grids

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -334,7 +334,9 @@ QFrame#variablePillFrame
 <plugin filename="Grid3D">
   <engine>ogre</engine>
   <scene>scene</scene>
-  <cell_count>5</cell_count>
-  <pose>3.0 0 0 0 0 0</pose>
-  <color>0.1 0.8 0.1 1.0</color>
+  <insert>
+    <cell_count>5</cell_count>
+    <pose>3.0 0 0 0 0 0</pose>
+    <color>0.1 0.8 0.1 1.0</color>
+  </insert>
 </plugin>
