scene params, documentation

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -329,7 +329,11 @@ QFrame#variablePillFrame
     </stylesheet>
 </window>
 <plugin filename="Scene3D">
+  <engine>ogre</engine>
   <scene>scene</scene>
+  <ambient_light>1 1 1</ambient_light>
+  <background_color>0.1 0.1 0.3</background_color>
+  <camera_pose>0 0 5 0 0.1 0</camera_pose>
 </plugin>
 <plugin filename="Grid3D">
   <engine>ogre</engine>
