grid test, plugin delete later

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -17,6 +17,7 @@ ign_build_tests(SOURCES ${gtest_local_sources})
 
 if (HAVE_IGN_RENDERING)
   set (gtest_rendering_sources
+    Grid3D_TEST.cc
     Scene3D_TEST.cc
   )
 endif()
