--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -335,7 +335,7 @@ QFrame#variablePillFrame
   <background_color>0.1 0.1 0.3</background_color>
   <camera_pose>0 0 5 0 0.1 0</camera_pose>
 </plugin>
-<plugin filename="Grid3D">
+<plugin filename="Grid3D" delete_later="true">
   <engine>ogre</engine>
   <scene>scene</scene>
   <insert>
