--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,11 +6,15 @@ pipelines:
         script:
           # Install dependencies
           - apt update
-          - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev libfreeimage-dev libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev libprotoc-dev libprotobuf-dev libzmq3-dev protobuf-compiler cppcheck mercurial
+          - apt install -y
+            build-essential wget cmake
+            qtbase5-dev libtinyxml2-dev libfreeimage-dev
+            libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev
+            libprotoc-dev libprotobuf-dev libzmq3-dev protobuf-compiler cppcheck mercurial
           # Static checking before building
           - sh tools/code_check.sh
           # Ignition math
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-math -b ign-math3
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-math -b ign-math4
           - cd ign-math
           - mkdir build
           - cd build
@@ -26,7 +30,7 @@ pipelines:
           - make install
           - cd ../..
           # Ignition msgs
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b default
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b ign-msgs1
           - cd ign-msgs
           - mkdir build
           - cd build
@@ -34,7 +38,7 @@ pipelines:
           - make install
           - cd ../..
           # Ignition transport
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-transport -b default
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-transport -b ign-transport4
           - cd ign-transport
           - mkdir build
           - cd build
