--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -13,6 +13,8 @@ set (qt_headers
   BoolWidget.hh
   CollapsibleWidget.hh
   ColorWidget.hh
+  Dialog.hh
+  Dock.hh
   EditableLabel.hh
   EnumWidget.hh
   GeometryWidget.hh
