pipelines branch just to check

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,7 +18,7 @@ pipelines:
           - make install
           - cd ../..
           # Ignition common
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-common -b default
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-common -b PluginClassOnly
           - cd ign-common
           - mkdir build
           - cd build
