--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,7 +22,7 @@ pipelines:
           - cd ign-math
           - mkdir build
           - cd build
-          - cmake .. -DENABLE_TESTS_COMPILATION=false
+          - cmake .. -DBUILD_TESTING=false
           - make install
           - cd ../..
           # Ignition common
