--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,45 +5,23 @@ pipelines:
     - step:
         script:
           # Install dependencies
+          - echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable xenial main" > /etc/apt/sources.list.d/gazebo-stable.list
+          - echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-prerelease xenial main" > /etc/apt/sources.list.d/gazebo-prerelease.list
+          - apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys D2486D2DD83DB69272AFE98867170598AF249743
           - apt update
-          - apt install -y build-essential wget cmake qtbase5-dev libtinyxml2-dev libfreeimage-dev libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev libprotoc-dev libprotobuf-dev libzmq3-dev protobuf-compiler cppcheck mercurial
+          - apt install -y build-essential wget cmake cppcheck mercurial
+            libfreeimage-dev libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev
+            libprotoc-dev libprotobuf-dev protobuf-compiler
+            qtbase5-dev libtinyxml2-dev
+            libignition-cmake-dev
+            libignition-math4-dev
+            libignition-msgs-dev
+            libignition-transport3-dev
           # Static checking before building
           - sh tools/code_check.sh
-          # Ignition cmake
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-cmake -b default
-          - cd ign-cmake
-          - mkdir build
-          - cd build
-          - cmake .. -DBUILD_TESTING=false
-          - make install
-          - cd ../..
-          # Ignition math
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-math -b ign-math4
-          - cd ign-math
-          - mkdir build
-          - cd build
-          - cmake .. -DBUILD_TESTING=false
-          - make install
-          - cd ../..
           # Ignition common
           - hg clone http://bitbucket.org/ignitionrobotics/ign-common -b default
           - cd ign-common
-          - mkdir build
-          - cd build
-          - cmake .. -DENABLE_TESTS_COMPILATION=false
-          - make install
-          - cd ../..
-          # Ignition msgs
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b default
-          - cd ign-msgs
-          - mkdir build
-          - cd build
-          - cmake .. -DENABLE_TESTS_COMPILATION=false
-          - make install
-          - cd ../..
-          # Ignition transport
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-transport -b default
-          - cd ign-transport
           - mkdir build
           - cd build
           - cmake .. -DENABLE_TESTS_COMPILATION=false
