--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -29,3 +29,18 @@
     <color>0.2 0.2 0.2 1.0</color>
   </insert>
 </plugin>
+<plugin filename="Geometry3D" delete_later="true">
+  <engine>ogre</engine>
+  <scene>scene</scene>
+  <insert>
+    <pose>3.0 0 0 0 0 0</pose>
+    <color>0.9 0.2 0.2 1.0</color>
+  </insert>
+</plugin>
+<plugin filename="Light3D" delete_later="true">
+  <engine>ogre</engine>
+  <scene>scene</scene>
+  <insert>
+    <color>0.2 0.2 0.2 1.0</color>
+  </insert>
+</plugin>
